--- a/css/style.css
+++ b/css/style.css
@@ -202,6 +202,7 @@ html,body{
   height: 90px;
   overflow: hidden;
   position: relative;
+  
 }
 .cont3 .imgs-area ul{
   width: 100%;
@@ -213,6 +214,7 @@ html,body{
   transform: scale(0.98);
   font-size: 0;
   padding: 30px;
+  cursor: grabbing;
 }
 .cont3 .imgs-area ul.active{
   transform: scale(1.0);
@@ -222,6 +224,7 @@ html,body{
   width: 50px;
   height: 50px;
   margin: 0 5px;
+  cursor: grabbing;
 }
 .cont3 .imgs-area ul li img{
   width: 100%;
